YETUS-1155: Fix site:site treeset problem (#251)
* YETUS-1155: Fix site:site treeset problem

* Fix problem with HtmlDoclet requiring DocEnvImpl. Changes wrapper to be a
subclass and adjusts pom to allow it through project jigsaw.