@@ -76,6 +76,7 @@
 
     <sourceReleaseAssemblyDescriptor>source-release-tar</sourceReleaseAssemblyDescriptor>
     <project.build.outputTimestamp>n</project.build.outputTimestamp>
+    <jigsaw.avoidance>--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</jigsaw.avoidance>
   </properties>
 
   <scm>
@@ -141,6 +142,8 @@
           <version>${maven-javadoc-plugin.version}</version>
           <configuration>
             <notimestamp>true</notimestamp><!-- avoid noise for svn/gitpubsub -->
+            <additionalOptions>${jigsaw.avoidance}</additionalOptions>
+            <additionalJOption>-J${jigsaw.avoidance}</additionalJOption>
           </configuration>
         </plugin>
 
@@ -148,6 +151,26 @@
           <artifactId>maven-clean-plugin</artifactId>
           <configuration>
             <failOnError>false</failOnError>
+          </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.10.1</version>
+          <configuration>
+            <compilerArgs>
+              <arg>${jigsaw.avoidance}</arg>
+            </compilerArgs>
+          </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.2</version>
+          <configuration>
+            <argLine>${jigsaw.avoidance}</argLine>
           </configuration>
         </plugin>
 
